Take orderId & productId from URL.

--- a/javascript-amazon-project-main/tracking.html
+++ b/javascript-amazon-project-main/tracking.html
@@ -89,10 +89,6 @@
       </div>
     </div>
 
-    <script>
-      const url = new URL(window.location.href);
-      console.log(url.searchParams.get('orderId'));
-      console.log(url.searchParams.get('productId'));
-    </script>
+    <script type="module" src="scripts/tracking.js"></script>
   </body>
 </html>
